# internal/api/handlers/handlers.go
@@ -47,9 +47,11 @@ func AttachAllRoutes(s *api.Server) {
 		common.GetSwaggerRoute(s),
 		common.GetVersionRoute(s),
 		monitoring.GetBatchOptimizationRoute(s),
+		monitoring.GetPaymentEventsStatsRoute(s),
 		monitoring.GetQueueHealthRoute(s),
 		monitoring.GetQueueMetricsRoute(s),
 		monitoring.GetQueueStatsRoute(s),
+		monitoring.PostReloadPaymentEventsConfigRoute(s),
 		push.PutUpdatePushTokenRoute(s),
 		tokens.DeleteTokenRoute(s),
 		tokens.GetTokenRoute(s),
